WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
239618
No-op, instead of throwing, on dataTransfer.items.remove()
https://bugs.webkit.org/show_bug.cgi?id=239618
Summary
No-op, instead of throwing, on dataTransfer.items.remove()
Domenic Denicola
Reported
2022-04-21 12:47:36 PDT
See
https://github.com/whatwg/html/pull/7844
and
https://github.com/web-platform-tests/wpt/pull/33737
.
Attachments
Patch
(4.19 KB, patch)
2022-04-21 13:12 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(6.08 KB, patch)
2022-04-21 15:11 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2022-04-21 13:12:35 PDT
Created
attachment 458085
[details]
Patch
EWS Watchlist
Comment 2
2022-04-21 13:13:56 PDT
This patch modifies the imported WPT tests. Please ensure that any changes on the tests (not coming from a WPT import) are exported to WPT. Please see
https://trac.webkit.org/wiki/WPTExportProcess
Chris Dumez
Comment 3
2022-04-21 15:11:17 PDT
Created
attachment 458096
[details]
Patch
EWS
Comment 4
2022-04-21 22:23:03 PDT
Committed
r293208
(
249879@main
): <
https://commits.webkit.org/249879@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 458096
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug