No-op, instead of throwing, on dataTransfer.items.remove() https://bugs.webkit.org/show_bug.cgi?id=239618

Reviewed by Wenson Hsieh.

LayoutTests/imported/w3c:

Import test coverage from upstream WPT.

* web-platform-tests/html/editing/dnd/datastore/datatransferitemlist-remove-expected.txt: Added.
* web-platform-tests/html/editing/dnd/datastore/datatransferitemlist-remove.html: Added.

Source/WebCore:

Calling dataTransfer.items.remove() with an out-of-range index should be a no-op instead of
throwing as per the latest HTML specification:
- https://github.com/whatwg/html/pull/7844

We were the only browser behaving this way so this was a compatibility risk.

Test: imported/w3c/web-platform-tests/html/editing/dnd/datastore/datatransferitemlist-remove.html

* dom/DataTransferItemList.cpp:
(WebCore::DataTransferItemList::remove):

Canonical link: https://commits.webkit.org/249879@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@293208 268f45cc-cd09-0410-ab3c-d52691b4dbfc